[project]
name = "mcpdemolangchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-groq>=0.3.5",
    "langchain-mcp-adapters",
    "langgraph>=0.5.1",
    "mcp>=1.10.1",
]

[tool.uv.sources]
langchain-mcp-adapters = { git = "https://github.com/langchain-ai/langchain-mcp-adapters.git" }
